--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vitejs/plugin-react-swc": "^3.11.0",
     "adm-zip": "^0.5.14",
     "chokidar": "^3.6.0",
+    "eslint": "^9.36.0",
     "js-yaml": "^4.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
