--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/node": "^20.14.10",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "adm-zip": "^0.5.14",
     "chokidar": "^3.6.0",
