--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "js-yaml": "^4.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.45.0",
     "vite": "^5.4.0"
   }
 }
