--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "globals": "^16.4.0",
     "js-yaml": "^4.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
