build: Create standalone tsconfig for independent build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,24 @@
 {
-  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    // Base settings from the old monorepo file
+    "target": "ES2022",
+    "useDefineForClassFields": true,
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "module": "ESNext",
+
+    // Settings specific to this app
     "composite": true,
+    "strict": true,
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "moduleDetection": "force",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "lib": ["ES2023", "DOM", "DOM.Iterable"],
-    "allowSyntheticDefaultImports": true,
     "types": ["vite/client"]
   },
-  "include": ["src"]
+  "include": ["src", "scripts"]
 }
