build: Enable strict type checking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     // Settings specific to this app
     "composite": true,
     "strict": true,
+    "strict": true,
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
