--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,13 +1,14 @@
 {
-  "extends": "../tsconfig.json", // It can still inherit from the main app tsconfig
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    // Settings for the Node.js scripts environment
+    // --- MODERNIZATION CHANGES ---
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    // --- END MODERNIZATION ---
     "target": "ES2022",
     "lib": ["ES2022"],
-    "noEmit": true, // We don't compile scripts, we run them with ts-node
-    "types": ["node"] // Specify node types for this environment
+    "noEmit": true,
+    "types": ["node"]
   },
   "include": ["./**/*.ts"],
   "exclude": ["node_modules"]
