--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    // --- MODERNIZATION CHANGES ---
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    // --- END MODERNIZATION ---
     "target": "ES2022",
     "lib": ["ES2022"],
     "noEmit": true,
     "types": ["node"]
   },
-  "include": ["./**/*.ts"],
+  "include": [
+    "./**/*.ts",
+    "../src/features/context-slicer/config/sanitation.config.ts"
+  ],
   "exclude": ["node_modules"]
 }
