--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "allowSyntheticDefaultImports": true,
     
     // --- MODERNIZATION CHANGES ---
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     // --- END MODERNIZATION ---
     
     "composite": true,
@@ -21,5 +21,5 @@
     "jsx": "react-jsx",
     "types": ["vite/client"]
   },
-  "include": ["src", "scripts"]
+  "include": ["src"]
 }
