--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.7",
+    "@types/babel__traverse": "^7.20.5",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.19.19",
     "@types/react": "^19.2.0",
