--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "eslint-plugin-react-refresh": "^0.4.23",
     "globals": "^16.4.0",
     "js-yaml": "^4.1.0",
+    "jsdom": "^27.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^5.4.20"
+    "vite": "^5.4.20",
+    "vitest": "^3.2.4"
   }
 }
