--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -11,23 +11,31 @@
     "package": "pnpm build:ui && pnpm build:server && pkg . --out-path release --targets node20-linux-x64,node20-win-x64"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/material": "^6.1.0",
     "@slicer/core": "workspace:*",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "express": "^5.0.0",
-    "cors": "^2.8.5",
     "chokidar": "^4.0.0",
+    "cors": "^2.8.5",
+    "express": "^5.0.0",
+    "ignore": "^5.3.2",
     "istextorbinary": "^2.3.0",
+    "js-yaml": "^4.1.0",
     "open": "^10.1.0",
-    "js-yaml": "^4.1.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
     "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/js-yaml": "^4.0.9",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "concurrently": "^9.0.0",
     "pkg": "^5.8.1",
     "tsx": "^4.19.0",
-    "vite": "^6.0.0",
-    "@vitejs/plugin-react-swc": "^3.7.0"
+    "vite": "^6.0.0"
   }
 }
