--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "lint": "pnpm -r lint"
   },
   "devDependencies": {
-    "typescript": "^5.9.0",
-    "eslint": "^9.39.0",
-    "prettier": "^3.6.0",
-    "typescript-eslint": "^8.47.0",
-    "@types/node": "^22.0.0" 
+    "typescript": "^5.9.3",
+    "eslint": "^9.39.1",
+    "prettier": "^3.6.2",
+    "typescript-eslint": "^8.48.0",
+    "@types/node": "^22.19.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "^19.0.0",
+      "@types/react-dom": "^19.0.0"
+    }
   }
 }
