--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,8 +21,13 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@vitejs/plugin-react-swc": "^3.11.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.15.0",
+    "typescript-eslint": "^8.18.0",
     "vite": "^7.2.4"
   }
 }
