--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:web": "pnpm --filter @slicer/web build",
     "dev:desktop": "pnpm --filter @slicer/desktop dev",
     "package:desktop": "pnpm --filter @slicer/desktop package",
-    "lint": "pnpm -r lint"
+    "lint": "pnpm -r lint",
+    "build": "pnpm build:web"
   },
   "devDependencies": {
     "typescript": "^5.9.3",
