--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.1.0",
