--- a/packages/web/packages/web/tsconfig.json
+++ b/packages/web/packages/web/tsconfig.json
@@ -5,7 +5,7 @@
       "paths": {
         "@/*": ["./src/*"]
       },
-      "types": ["vite/client", "node", "react", "react-dom"]
+      "types": ["vite/client", "node"]
     },
     "include": ["src", "vite.config.ts"],
     "exclude": ["node_modules", "dist"]
