--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,10 +3,17 @@ name: Release Desktop App
 on:
   push:
     tags:
-      - "v*" # Triggers on tags like v1.0.0, v2.1.3, etc.
+      - "v*"
+  # This enables the manual button in GitHub UI
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version Tag (e.g. v1.3.0)'
+        required: true
+        default: 'v1.x.x'
 
 permissions:
-  contents: write # Required to create releases and upload assets
+  contents: write
 
 jobs:
   build-and-release:
@@ -25,20 +32,20 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
           cache: "pnpm"
 
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
 
       - name: Build Desktop Executables
-        # This runs your existing build script: vite build + esbuild + pkg
         run: pnpm --filter @slicer/desktop package
 
       - name: Create Release & Upload Assets
         uses: softprops/action-gh-release@v2
         with:
-          # pkg outputs files to packages/desktop/release/
+          # LOGIC: If manual input exists, use it. Otherwise, use the git tag name.
+          tag_name: ${{ inputs.version || github.ref_name }}
           files: |
             packages/desktop/release/desktop-linux
             packages/desktop/release/desktop-win.exe
